Email + Virtual Class (beta)

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,11 @@ const firebaseConfig = {
 };
 
 // Initialize Firebase
-const app = initializeApp(firebaseConfig);""
+const app = initializeApp(firebaseConfig);"
+
+# Virtual Classroom WebSocket Server URL
+# For local development
+VITE_YJS_SERVER_URL=ws://localhost:1234
+
+# For production (update with your actual WebSocket server URL)
+# VITE_YJS_SERVER_URL=wss://your-production-server.com
